--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,6 +4,13 @@ description: "A new Flutter project."
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
 publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 
+include: package:flutter_lints/flutter.yaml
+
+linter:
+  rules:
+    avoid_print: false
+
+
 # The following defines the version and build number for your application.
 # A version number is three numbers separated by dots, like 1.2.43
 # followed by an optional build number separated by a +.
@@ -31,6 +38,7 @@ dependencies:
   get: ^4.6.6
 
   firebase_auth: ^5.3.0
+  cloud_firestore: ^5.4.2
   
   flutter:
     sdk: flutter
