--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,11 @@ environment:
 # versions available, run `flutter pub outdated`.
 dependencies:
   get: ^4.6.6
+  intl: ^0.19.0
+  file_picker: ^8.1.2
+  another_dashed_container: ^1.0.0
+  path: ^1.9.0
+  
 
   firebase_auth: ^5.3.0
   cloud_firestore: ^5.4.2
@@ -48,6 +53,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
   firebase_core: ^3.5.0
+  firebase_storage: ^12.3.1
 
 dev_dependencies:
   flutter_test:
